<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_project"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:textColor="@color/black_shadow"
                android:textSize="14sp"
                tools:text="@string/item_regulation_project" />

            <TextView
                android:id="@+id/tv_times"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black_shadow"
                android:textSize="14sp"
                tools:text="@string/item_regulation_times" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_start_point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:textColor="@color/black_shadow"
                android:textSize="14sp"
                tools:text="@string/item_regulation_start_point" />

            <TextView
                android:id="@+id/tv_schedule"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black_shadow"
                android:textSize="14sp"
                tools:text="@string/fragment_gis_regulation_schedule" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_plan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:textColor="@color/black_shadow"
                android:textSize="14sp"
                tools:text="@string/item_regulation_plan" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black_shadow"
                android:textSize="14sp"
                tools:text="@string/fragment_gis_regulation_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_work_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:textColor="@color/black_shadow"
                android:textSize="14sp"
                tools:text="@string/item_regulation_start_time" />

            <TextView
                android:id="@+id/tv_work_end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black_shadow"
                android:textSize="14sp"
                tools:text="@string/item_regulation_finish_time1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_case"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:textColor="@color/black_shadow"
                android:textSize="14sp"
                tools:text="@string/activity_regulation_case" />

            <TextView
                android:id="@+id/tv_effect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black_shadow"
                android:textSize="14sp"
                tools:text="@string/activity_regulation_effect" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_evaluation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:textColor="@color/black_shadow"
                android:textSize="14sp"
                tools:text="@string/activity_regulation_assessment" />

            <TextView
                android:id="@+id/tv_finish_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black_shadow"
                android:textSize="14sp"
                tools:text="@string/item_regulation_finish_time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_site_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:textColor="@color/black_shadow"
                android:textSize="14sp"
                tools:text="@string/item_regulation_case" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:textColor="@color/black_shadow"
            android:textSize="14sp"
            tools:text="@string/item_regulation_note" />
        <com.gaocheng.baselibrary.widget.MyGridView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:verticalSpacing="4dp"
            android:horizontalSpacing="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:numColumns="5"/>
    </LinearLayout>
</ScrollView>


