<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ll_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:paddingTop="8dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_flow_town"
                android:textSize="14sp"
                android:textColor="@color/black_shadow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="12dp"
                android:layout_height="wrap_content"
                tools:text="@string/fragment_gis_basic_flow_town"
                />
            <TextView
                android:id="@+id/tv_over_town"
                android:textSize="14sp"
                android:textColor="@color/black_shadow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:text="@string/fragment_gis_basic_over_town"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_belong_town"
                android:textSize="14sp"
                android:textColor="@color/black_shadow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="12dp"
                android:layout_height="wrap_content"
                tools:text="@string/fragment_gis_basic_belong_town"
                />
            <TextView
                android:id="@+id/tv_shrink_river"
                android:textSize="14sp"
                android:textColor="@color/black_shadow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:text="@string/fragment_gis_basic_shrink_river"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_pump_name"
                android:textSize="14sp"
                android:textColor="@color/black_shadow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="12dp"
                android:layout_height="wrap_content"
                tools:text="@string/item_basic_pump_name"
                />
            <TextView
                android:id="@+id/tv_length"
                android:textSize="14sp"
                android:textColor="@color/black_shadow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:text="@string/item_basic_length"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_control"
                android:textSize="14sp"
                android:layout_marginLeft="12dp"
                android:textColor="@color/black_shadow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:text="@string/item_basic_control"
                />
            <TextView
                android:id="@+id/tv_area"
                android:textSize="14sp"
                android:textColor="@color/black_shadow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:text="@string/item_basic_area"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_note"
            android:textSize="14sp"
            android:textColor="@color/black_shadow"
            android:layout_width="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_height="wrap_content"
            tools:text="@string/item_regulation_note"
            />
        <com.gaocheng.baselibrary.widget.MyGridView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:verticalSpacing="4dp"
            android:horizontalSpacing="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:numColumns="5"/>
    </LinearLayout>
</ScrollView>

