<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/tv_town_name"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/title_textcolor"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/item_basic_town_name" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/item_basic_river_name"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/title_textcolor"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/item_regulation_content"
            android:textColor="@color/title_textcolor"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_condition"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:lines="1"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:textColor="@color/title_textcolor"
                android:textSize="16sp"
                tools:text="@string/item_regulation_condition" />

            <TextView
                android:id="@+id/tv_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/title_textcolor"
                android:textSize="16sp"
                tools:text="@string/item_regulation_times" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_finish_time1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/item_regulation_finish_time"
            android:textColor="@color/title_textcolor"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_look_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:padding="12dp"
        android:src="@mipmap/arrow_gray_down" />
</LinearLayout>

