<?xml version="1.0" encoding="utf-8"?>
<com.gaocheng.baselibrary.widget.SwipeItemLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View style="@style/horizontal_space" />
        <include layout="@layout/item_regulation_info_main" />

        <View style="@style/line" />

        <LinearLayout
            android:id="@+id/ll_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/more_bg"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_project"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:textColor="@color/grayText"
                    android:textSize="14sp"
                    tools:text="@string/item_regulation_project" />
                <TextView
                    android:id="@+id/tv_start_point"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/grayText"
                    android:textSize="14sp"
                    tools:text="@string/item_regulation_start_point" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_plan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:text="@string/item_regulation_plan"
                    android:textColor="@color/grayText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_evaluation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_regulation_assessment"
                    android:textColor="@color/grayText"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_start_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:text="@string/item_regulation_start_time"
                    android:textColor="@color/grayText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_finish_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_regulation_finish_time1"
                    android:textColor="@color/grayText"
                    android:textSize="14sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_case"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/item_regulation_case"
                android:textColor="@color/grayText"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/item_regulation_note"
                android:textColor="@color/grayText"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_advice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="12dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/item_regulation_advice"
                android:textColor="@color/grayText"
                android:textSize="14sp" />
            <com.gaocheng.baselibrary.widget.MyGridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:verticalSpacing="4dp"
                android:horizontalSpacing="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:numColumns="5"/>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View style="@style/horizontal_space" />
        <TextView
            android:id="@+id/delete"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@color/baseColor"
            android:gravity="center"
            android:text="@string/item_regulation_delete"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </LinearLayout>
</com.gaocheng.baselibrary.widget.SwipeItemLayout>





